# insurara

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REVIEWER_GUIDE.md  SPEC.md  dev.sh  setup.sh
.claude/: settings.json
.claude/agents/: browser-e2e-verifier.md  domain-code-reviewer.md
.codex/: hooks.json
.codex/agents/: browser-e2e-verifier.toml  domain-code-reviewer.toml
ai-artifacts/: README.md
ai-artifacts/claude/: 1a646200-e867-458b-a3fe-5138202e9a24.jsonl  baa0dd7a-b901-4c09-a834-aa01d4239146.jsonl  de1bc40d-6cac-4d92-a022-8e62a2a09d33.jsonl
ai-artifacts/codex/: rollout-2026-06-09T17-48-32-019eac51-f1dc-7bf3-9120-0e83d00cb891.jsonl  (+3 more)
app/backend/: pyproject.toml
app/backend/claims/: seed.py
app/backend/claims/api/: app.py  deps.py  errors.py  schemas.py  serialize.py
app/backend/claims/api/routers/: claims.py  disputes.py  reference.py
app/backend/claims/application/: __init__.py  controllers.py
app/backend/claims/domain/: enums.py  models.py  money.py  state_machine.py
app/backend/claims/engine/: context.py  pipeline.py  steps.py
app/backend/claims/mcp/: __init__.py  reviewer.py
app/backend/claims/persistence/: db.py  models.py  types.py
app/backend/claims/service/: claims.py  snapshot.py
app/backend/tests/: conftest.py  helpers.py  test_api.py  test_controllers.py  test_disputes.py  test_mcp.py  test_money.py  test_persistence.py  test_proportionate.py  test_seed.py  test_service_guards.py  test_settlement.py  test_state_machine.py  test_steps.py  test_worked_example.py
docs/: decisions.md  domain-model.md  self-review.md
(+16 files in other folders)
