[project]
name = "claims-backend"
version = "0.1.0"
description = "Claims Processing System — adjudication engine, persistence, and REST API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.uv]
package = false
