[project]
name = "claims-backend"
version = "0.1.0"
description = "Claims Processing System — adjudication engine, persistence, and REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "mcp>=1.27.2",
    "pydantic>=2.6",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.uv]
package = false
